--- a/tasks/login-to-cluster.yml
+++ b/tasks/login-to-cluster.yml
@@ -24,12 +24,15 @@
   when: ansible_distribution == 'MacOSX'
   tags: always 
 
-- name: login as super user with token on OpenShift 4
-  command: "{{ oc_location }} login --token={{ openshift_token }}  --server={{ openshift_url }} --insecure-skip-tls-verify={{ insecure_skip_tls_verify }}"
+- name: login as super user with user and password on OpenShift 4
+  command: "{{ oc_location }} login --username={{ openshift_username }} --password={{ openshift_password }} --server={{ openshift_url }} --insecure-skip-tls-verify={{ insecure_skip_tls_verify }}"
   when:
-   - openshift_token is defined
-   - openshift_token is not none
-   - openshift_token|trim() != ""
+   - openshift_username is defined
+   - openshift_username is not none
+   - openshift_username|trim() != ""
+   - openshift_password is defined
+   - openshift_password is not none
+   - openshift_password|trim() != ""   
   ignore_errors: no
   tags: always 
 
